# ha-joyonway

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  README_PATCH.md  SECURITY.md  hacs.json  plan.md  pyproject.toml
.github/: pull_request_template.md  release-drafter.yml
captures_phase4/: session_manifest.json
docs/: code_review.md  community_feedback_todo.md  crc_analysis.md  crc_params.json  live_test_plan.md  p20b29_protocol.md  p23b32_protocol.md  p23b32_review.md  p23b32_review_implementation_plan.md  p25b37_protocol.md  p25b85_protocol.md  p25b85_setup.md  plan.md  protocol.md  protocol_review.md  resilient_ui_plan.md  review.md
tests/: README.md  _loader.py  test_config_flow.py  test_coordinator_resilient.py  test_entities_runtime.py  test_fan_entity_runtime.py  test_frame_protocol.py  test_init_runtime.py  test_light.py  test_p20b29_adapter.py  test_p23b32_adapter.py  test_p25b37_adapter.py  test_p25b85_adapter.py
tools/: README.md  analyze_crc.py  analyze_crc_session.py  analyze_crc_session2.py  analyze_heating_frames.py  analyze_phase4.py  analyze_phase5.py  analyze_phase6.py  analyze_schedule_captures.py  bf_poly.c  capture_about_menu.py  capture_crc_session.py  capture_date_set.py  capture_heating_cycle.py  capture_schedule_both_slots.py  capture_schedule_changes.py  capture_schedule_s1_on_s2_off.py  capture_schedule_slot2.py  capture_temp_commands.py  capture_unmapped_bytes.py  check_ozone_byte13.py  check_ozone_byte57.py  check_ozone_final.py  check_ozone_mode_broadcast.py  crack_crc.py  crack_crc2.py  (+30 more)
(+89 files in other folders)
