[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-joyonway"
version = "0.1.0"
description = "Joyonway P25B85 Home Assistant integration"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-homeassistant-custom-component>=0.13",
  "homeassistant>=2026.1.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -m \"not live\" --ignore=tests/live"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
    "live: tests requiring physical hardware/bridge connections",
]

